--- a/style.css
+++ b/style.css
@@ -1,15 +1,24 @@
-.add{
-     text-align: end;
-    margin-right: 17%;
-    margin-top: 4%;
+.add {
+    background-color: #fffffc;
+    position: fixed;
+    right: 5%;
+    bottom: 4%;
+    text-align: end;
+    cursor: pointer;
+    /* z-index: 1000; */
+    border-radius: 50%;
 }
+
+
 .navbar-brand{
     font-size: 50px;
-    padding-left: 100px;
+    padding-right: 239px;
     color: white;
+    
 }
 body{
     background: #000106;
+    padding-bottom: 150px;
 }
 table{
     width: 90%;
@@ -62,3 +71,33 @@ nav{
     border-color: #9f9fa2;
     background: #9f9fa2;
 }  
+.sort-buttons {
+    margin-bottom: 10px;
+    margin-left: 12%;
+}
+
+.sort-buttons button {
+    margin-right: 5px;
+    cursor: pointer;
+    height: 36px;
+    border-radius: 9px;
+    align-content: center;
+    background-color: #333439;
+    border: none;
+    color: white;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+#search-button{
+    height: 50px;
+    width: 50px;
+    border-radius: 18px;
+    background-color: #333439;
+    border: none;
+}
+.search-container{
+    padding-right: 122px;
+}
+
+
+
