--- a/style.css
+++ b/style.css
@@ -1,76 +1,96 @@
 .add {
     background-color: #fffffc;
     position: fixed;
-    right: 4rem;
+    right: 2rem;
     bottom: 1rem;
     text-align: end;
     cursor: pointer;
-    /* z-index: 1000; */
     border-radius: 50%;
+    z-index: 1000;
+}
+/* .nav-link{
+    color: white;
+} */
+
+.navbar-brand {
+    font-size: 40px;
+    padding-left: 5rem;
+    color: white;
+}
+.navbar-brand:hover {
+    color: white;
 }
 
-
-.navbar-brand{
-    font-size: 50px;
-    padding-left: 9rem;
-    color: white;
-    
-}
-.navbar-brand:hover{
-    color: white;
-}
-body{
+body {
     background: #000106;
-    padding-bottom: 10rem;
+    padding-bottom: 5rem;
 }
-.dis_container{
-    width:75vw;
-    margin:auto
+
+.dis_container {
+    width: 90vw;
+    margin: auto;
 }
-.display{
+
+.display {
     border-radius: 10px;
     background-color: #625c28;
-    width: 75vw;
+    width: 90vw;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: baseline;
     margin: auto;
     margin-top: 1rem;
     color: #fffffc;
-    padding-left: 2%;
+    padding: 1rem 2%;
+
+    
 }
-nav{
-    margin-bottom: 3rem;
+
+nav {
+    margin-bottom: 2rem;
 }
-.time{
-    padding-left: 83%;
-    font-size: 13px;
-    color: white;
-    margin-top: 9px;
-}
-.display_title{
+
+.display_title {
     margin-top: 2%;
 }
-.btns{
-    padding-left: 83%;
+
+.row-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-top: 10px; /* Space between title/description and buttons/time */
 }
-.navbar{
-    
+
+.btns {
+    padding-left: 73vw;
+    display: flex;
+    gap: 0.5rem;
+}
+
+.time {
+    padding-left: 73vw;
+    font-size: 12px;
+    color: white;
+    margin-top: 1rem;
+}
+
+.navbar {
     background-color: #625c28;
     background: #000106;
 }
-.btns button{
+
+.btns button {
     background: #9f9fa2;
     border-color: #9f9fa2;
 }
-.btns button:hover{
+.btns button:hover {
     border-color: #9f9fa2;
     background: #9f9fa2;
-}  
+}
+
 .sort-buttons {
     margin-bottom: 10px;
-    margin-left: 12%;
+    margin-left: 8%;
 }
 
 .sort-buttons button {
@@ -85,16 +105,135 @@ nav{
     padding-left: 15px;
     padding-right: 15px;
 }
-#search-button{
-    height: 50px;
-    width: 50px;
-    border-radius: 18px;
+
+#search-button {
+    height: 40px;
+    width: 40px;
+    border-radius: 12px;
     background-color: #333439;
     border: none;
 }
-.search-container{
-    padding-right: 122px;
+
+.search-container {
+    padding-right: 80px;
 }
 
+/* Responsive Styles */
+@media screen and (max-width: 768px) {
+    .navbar-brand {
+        font-size: 30px;
+        padding-left: 2rem;
+    }
+
+    .dis_container {
+        width: 95vw;
+    }
+
+    .display {
+        width: 95vw;
+        padding-left: 3%;
+    }
+
+    .sort-buttons {
+        margin-left: 5%;
+    }
+
+    .add {
+        right: 1rem;
+        bottom: 0.5rem;
+    }
+    .btns {
+      padding-left: 60vw;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .navbar-brand {
+        font-size: 25px;
+        padding-left: 1rem;
+    }
+
+    .row-container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .btns {
+        /* padding-left: 30px; */
+        /* order: 1; Move buttons first on small screens */
+        padding-left: 60vw;
+        width: 100%;
+        justify-content: space-between; /* Spread buttons across full width */
+        margin-bottom: 5px;
+    }
+
+    .time {
+        order: 2; /* Move time after buttons */
+        font-size: 11px;
+        text-align: right; /* Align time to the right */
+        width: 100%; /* Ensure time takes up full width */
+    }
+
+    .add {
+        right: 0.5rem;
+        bottom: 0.5rem;
+    }
+
+    #search-button {
+        height: 36px;
+        width: 36px;
+    }
+
+    .sort-buttons button {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+}
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+.openbtn {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #111;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    position: fixed;
+    top: 15px;
+    left: 15px;
+    z-index: 2;
+}
 
 
