--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@
 }
 
 body {
-    background: #000106;
-    padding-bottom: 5rem;
+    background: #000106d0;
+    
 }
 
 .dis_container {
@@ -41,6 +41,7 @@ body {
     margin-top: 1rem;
     color: #fffffc;
     padding: 1rem 2%;
+    height: 13rem;
 
     
 }
@@ -234,6 +235,15 @@ nav {
     top: 15px;
     left: 15px;
     z-index: 2;
+}
+footer{
+    text-align: center;
+     padding: 10px; 
+     color: white;
+     background-color:#000000; 
+    
+      width: 100%;
+    
 }
 
 
